--- a/django-app/user_management/templates/user_management/password_update.html
+++ b/django-app/user_management/templates/user_management/password_update.html
@@ -1,33 +1,19 @@
-{% extends 'base.html' %}
+{% extends 'base_box.html' %}
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}
-    {{ block.super }} {% translate 'Update password' %}
+{% block title %}{{ block.super }} {% translate 'Update password' %}{% endblock %}
+
+{% block back_url %}
+    <a href="{% url 'user_management:settings' %}" class="font-6 path-link no-decoration">
+        <i class="fas fa-chevron-left mr-2"></i>
+        {% translate 'Settings' %}
+    </a>
 {% endblock %}
 
-{% block content %}
-    <div class="row justify-content-center p-4">
-        <div class="site-box p-4 bg-white col-12 col-lg-7 shadow">
-            <div class="row mb-3">
-                <div class="col">
-                    <a href="{% url 'user_management:settings' %}" class="font-6 path-link no-decoration">
-                        <i class="fas fa-chevron-left mr-2"></i>
-                        {% translate 'Settings' %}
-                    </a>
-                </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col">
-                    <h2 class="site-color header-font mb-0">{% translate 'Update password' %}</h2>
-                    <span class="text-muted header-font">{% translate 'Choose a new password' %}</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    {% crispy form %}
-                </div>
-            </div>
-        </div>
-    </div>
+{% block box_title %}{% translate 'Update password' %}{% endblock %}
+{% block box_subtitle %}{% translate 'Choose a new password' %}{% endblock %}
+
+{% block main_content %}
+    {% crispy form %}
 {% endblock %}
