--- a/django-app/user_management/templates/user_management/settings.html
+++ b/django-app/user_management/templates/user_management/settings.html
@@ -1,64 +1,53 @@
-{% extends 'base.html' %}
+{% extends 'base_box.html' %}
 {% load i18n %}
 
 {% block title %}{{ block.super }} {% translate "Settings" %}{% endblock %}
 
-{% block content %}
-    <div class="row justify-content-center p-4">
-        <div class="site-box p-4 bg-white col-sm-12 col-lg-7 shadow">
-            <div class="row mb-3">
-                <div class="col">
-                    <a href="{% url 'transcribe:transcription-list' %}" class="font-6 path-link no-decoration">
-                        <i class="fas fa-chevron-left mr-2"></i>
-                        {% translate "Back" %}
-                    </a>
-                </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col">
-                    <h2 class="site-color header-font mb-0">{% translate "Settings" %}</h2>
-                    <span class="text-muted header-font">{% trans "Customize your experience" %}</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col d-flex flex-column">
-                    <a href="#" class="site-blue-text font-6 no-decoration">
-                        <i class="fa-solid fa-earth-europe"></i> {% translate "Language" %}
-                    </a>
-                    <span class="text-muted font-5">
-                        {% blocktranslate %}
-                            Choose the default transcription language
-                        {% endblocktranslate %}
-                    </span>
-                    <hr>
-                    <a href="{% url 'user_management:password-update' %}" class="site-blue-text font-6 no-decoration">
-                        <i class="fa-solid fa-lock"></i> {% translate 'Update password' %}
-                    </a>
-                    <span class="text-muted font-5">
-                        {% blocktranslate %}
-                            Create a new password
-                        {% endblocktranslate %}
-                    </span>
-                    <hr>
-                    <a href="{% url 'user_management:logout' %}" class="site-red-text font-6 no-decoration">
-                        <i class="fa-solid fa-right-from-bracket"></i> {% translate "Logout" %}
-                    </a>
-                    <span class="text-muted font-5">
-                        {% blocktranslate %}
-                            Logout from the service
-                        {% endblocktranslate %}
-                    </span>
-                    <hr>
-                    <a href="{% url 'user_management:delete' %}" class="site-red-text font-6 no-decoration">
-                        <i class="fa-solid fa-circle-minus"></i> {% translate "Delete my account" %}
-                    </a>
-                    <span class="text-muted font-5">
-                        {% blocktranslate %}
-                            Delete your account and all your information
-                        {% endblocktranslate %}
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
+{% block back_url %}
+    <a href="{% url 'transcribe:transcription-list' %}" class="font-6 path-link no-decoration">
+        <i class="fas fa-chevron-left mr-2"></i>
+        {% translate "Back" %}
+    </a>
+{% endblock %}
+
+{% block box_title %}{% translate 'Settings' %}{% endblock %}
+{% block box_subtitle %}{% translate 'Customize your experience' %}{% endblock %}
+
+{% block col_main_content_classes %}d-flex flex-column{% endblock %}
+{% block main_content %}
+    <a href="#" class="site-blue-text font-6 no-decoration">
+        <i class="fa-solid fa-earth-europe"></i> {% translate "Language" %}
+    </a>
+    <span class="text-muted font-5">
+        {% blocktranslate %}
+            Choose the default transcription language
+        {% endblocktranslate %}
+    </span>
+    <hr>
+    <a href="{% url 'user_management:password-update' %}" class="site-blue-text font-6 no-decoration">
+        <i class="fa-solid fa-lock"></i> {% translate 'Update password' %}
+    </a>
+    <span class="text-muted font-5">
+        {% blocktranslate %}
+            Create a new password
+        {% endblocktranslate %}
+    </span>
+    <hr>
+    <a href="{% url 'user_management:logout' %}" class="site-red-text font-6 no-decoration">
+        <i class="fa-solid fa-right-from-bracket"></i> {% translate "Logout" %}
+    </a>
+    <span class="text-muted font-5">
+        {% blocktranslate %}
+            Logout from the service
+        {% endblocktranslate %}
+    </span>
+    <hr>
+    <a href="{% url 'user_management:delete' %}" class="site-red-text font-6 no-decoration">
+        <i class="fa-solid fa-circle-minus"></i> {% translate "Delete my account" %}
+    </a>
+    <span class="text-muted font-5">
+        {% blocktranslate %}
+            Delete your account and all your information
+        {% endblocktranslate %}
+    </span>
 {% endblock %}
