--- a/django-app/templates/base_box.html
+++ b/django-app/templates/base_box.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row justify-content-center p-4">
-        <div class="site-box p-4 bg-white col-12 col-lg-7 shadow">
+        <div class="site-box p-4 bg-white {% block box_col_size %}col-12 col-lg-7{% endblock %} shadow">
             <div class="row mb-3">
                 <div class="col">
                     {% block back_url %}{% endblock %}
