transcribe, templates, transcription_detail.html: added safe filter to HTMLField to display it correctly

--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -77,7 +77,7 @@
         <div class="row mt-5 me-5">
             <div class="col">
                 <p>
-                    {{ transcription_object.text }}
+                    {{ transcription_object.text|safe }}
                 </p>
             </div>
         </div>
