transcribe, templates, transcription_update.html: updated css

--- a/django-app/transcribe/templates/transcribe/transcription_update.html
+++ b/django-app/transcribe/templates/transcribe/transcription_update.html
@@ -4,9 +4,15 @@
 
 {% block extra_css %}
     <style>
-        textarea {
-            resize: none;
-            border: none !important;
+        .tox-tinymce {
+            border: 0 !important;
+            height: 800px !important;
+        }
+        .tox-toolbar__group {
+            border: 0 !important;
+         }
+        .tox-sidebar-wrap {
+            border: 0 !important;
         }
     </style>
 {% endblock %}
