--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -2,6 +2,14 @@
 {% load i18n %}
 
 <div class="site-box p-4 bg-white col shadow">
+    <div id="transcription-detail-back-url" class="row mb-3 d-none">
+        <div class="col">
+            <a href="{% url 'transcribe:transcription-list' %}" class="font-6 path-link no-decoration">
+                <i class="fas fa-chevron-left mr-2"></i>
+                {% translate "Back" %}
+            </a>
+        </div>
+    </div>
     <div class="row mb-5 gap-3">
         <div class="col-lg-6 col-12">
             <h2 class="header-font mb-0">{{ transcription_object.name }}</h2>
