--- a/django-app/transcribe/templates/transcribe/transcription_list.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list.html
@@ -1,7 +1,7 @@
 {% load transcribe_filters %}
 {% load i18n %}
 
-<div class="d-flex site-box p-4 bg-white col-12 col-lg-3 shadow flex-column">
+<div id="transcription-list-box" class="d-none site-box p-4 bg-white col-12 col-lg-3 shadow flex-column">
     <div class="list-group list-group-flush">
         {% for transcription in transcriptions %}
             <a href="{% url 'transcribe:transcription-list' transcription.pk %}" class="list-group-item list-group-item-action d-flex gap-3 py-3 align-items-center" aria-current="true">
