--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="row mb-5 gap-3">
-        <div class="col-lg-6 col-12">
+        <div class="col">
             <h2 class="header-font mb-0">{{ transcription_object.name }}</h2>
             <h5 class="text-muted">{{ transcription_object.get_language_display|title }}</h5>
             <div>
@@ -28,7 +28,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="d-flex col justify-content-start align-items-mobile-start align-items-end flex-column">
+        <div class="d-flex col-auto justify-content-start align-items-mobile-start align-items-end flex-column">
             <span class="text-muted header-font font-size-90">
                 {% translate "Created" %}
                 {{ transcription_object.create_datetime|naturalday }}
