tempaltes: renamed header-font -> subtitle-font

--- a/django-app/templates/base_box.html
+++ b/django-app/templates/base_box.html
@@ -10,8 +10,8 @@
             </div>
             <div class="row mb-4">
                 <div class="col">
-                    <h2 class="site-color header-font mb-0">{% block box_title %}{% endblock %}</h2>
-                    <span class="text-muted header-font">{% block box_subtitle %}{% endblock %}</span>
+                    <h2 class="site-color logo-font mb-0">{% block box_title %}{% endblock %}</h2>
+                    <span class="text-muted subtitle-font">{% block box_subtitle %}{% endblock %}</span>
                 </div>
             </div>
             <div class="row">
