--- a/django-app/transcribe/templates/transcribe/transcription_delete.html
+++ b/django-app/transcribe/templates/transcribe/transcription_delete.html
@@ -19,8 +19,8 @@
             </div>
             <div class="row mb-4">
                 <div class="col">
-                    <h2 class="site-color header-font mb-0">{{ object.name }}</h2>
-                    <span class="text-muted header-font">{% translate "Delete transcription" %}</span>
+                    <h2 class="site-color subtitle-font mb-0">{{ object.name }}</h2>
+                    <span class="text-muted subtitle-font">{% translate "Delete transcription" %}</span>
                 </div>
             </div>
             <div class="row">
