--- a/django-app/transcribe/templates/transcribe/transcription_list.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list.html
@@ -17,12 +17,12 @@
                     <i class="fa-solid fa-spinner site-yellow-text"></i>
                 {% endif %}
                 <div class="text-wrap">
-                    <h6 class="font-6 header-font">{{ transcription.name }}</h6>
-                    <p class="mb-0 text-muted header-font">
+                    <h6 class="font-5 logo-font">{{ transcription.name }}</h6>
+                    <p class="mb-0 text-muted subtitle-font">
                         <i class="fa-solid fa-microphone-lines"></i>
                         {{ transcription.readable_duration }}
                     </p>
-                    <p class="mb-0 text-muted header-font">
+                    <p class="mb-0 text-muted subtitle-font">
                         {{ transcription.text_words }} {% translate "words" %}
                     </p>
                 </div>
