--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -69,7 +69,7 @@
             {% else %}
                 {% include 'transcribe/transcription_list.html' %}
                 <div class="col d-lg-flex d-none align-items-center mt-4 flex-column" style="margin-top: 15rem !important;">
-                    <p class="d-flex flex-column mb-0">
+                    <p class="d-flex flex-column mb-0 logo-font">
                         {% blocktranslate %}
                             <span class="font-7">Select</span>
                             <span class="font-7 font-size-150">a transcription</span>
