--- a/django-app/user_management/templates/user_management/email_verification_needed.html
+++ b/django-app/user_management/templates/user_management/email_verification_needed.html
@@ -7,7 +7,7 @@
     <div class="row justify-content-center p-4">
         <div class="col-md-9 col-12">
             <h3 class="font-7 logo-font text-center site-color">{% translate "Check your email inbox." %}</h3>
-            <h5 class="font-7 text-muted text-center header-font">
+            <h5 class="font-7 text-muted text-center subtitle-font">
                 {% blocktranslate %}
                     You should have received a link to confirm your email.
                     If you have already confirmed it, you can now log in.
