--- a/django-app/user_management/templates/user_management/email_verified.html
+++ b/django-app/user_management/templates/user_management/email_verified.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col site-col p-4">
                 <h3 class="font-7 logo-font site-color big-text mb-3">{% translate "Welcome" %}</h3>
-                <h5 class="font-5 header-font">
+                <h5 class="font-5 subtitle-font">
                     {% translate "Your email has been successfully verified." %}
                     <a class="site-blue-text font-7 site-light-blue-text-mobile"
                        href="{% url 'home' %}">
