--- a/django-app/user_management/templates/registration/base_signin.html
+++ b/django-app/user_management/templates/registration/base_signin.html
@@ -13,7 +13,7 @@
                 <div class="mb-5 d-flex flex-column align-items-center">
                     <img src="{% static 'img/ghost.png' %}" alt="Ghost icon" class="picture-small-fixed">
                     <h2 class="font-7 logo-font site-color mb-0 text-center">{% block signing_title %}{% endblock %}</h2>
-                    <span class="header-font text-center">{% block signing_subtitle %}{% endblock %}</span>
+                    <span class="subtitle-font text-center">{% block signing_subtitle %}{% endblock %}</span>
                 </div>
                 <form method="POST">
                     <div>
