--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -24,15 +24,15 @@
             </div>
             <h2 class="logo-font font-8 mb-0">{{ transcription_object.name }}</h2>
             <h5 class="subtitle-font text-muted">{{ transcription_object.get_language_display|title }}</h5>
-            <div>
+            <div class="logo-font">
                 {% if transcription_object.transcribed %}
                     <i class="fa-solid fa-check site-green-text mt-1"></i>
-                    <span class="site-green-text font-6 subtitle-font">
+                    <span class="site-green-text font-6">
                         {% translate "Successfully transcribed" %}
                     </span>
                 {% else %}
                     <div class="spinner-border spinner-border-sm site-blue-text mt-1" role="status"></div>
-                    <span class="site-blue-text font-6 subtitle-font">
+                    <span class="site-blue-text font-6">
                         {% translate "Processing audio" %}
                     </span>
                 {% endif %}
@@ -69,7 +69,7 @@
                     Your browser does not support the audio element.
                 </audio>
             {% else %}
-                <p>
+                <p class="logo-font">
                     <i class="fa-solid fa-headphones"></i>
                     {% blocktranslate %}
                         We are <span class="font-6">converting</span> the audio.
@@ -104,7 +104,7 @@
     {% else %}
         <div class="row mt-4">
             <div class="col">
-                <p class="mt-5 font-6 mb-0">{% translate 'Transcription will be available soon.' %}</p>
+                <p class="mt-5 font-6 mb-0 logo-font">{% translate 'Transcription will be available soon.' %}</p>
                 <hr id="processing-transcription-hr" class="site-red-text mt-0">
             </div>
         </div>
