--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -31,7 +31,7 @@
         <div class="row px-4">
             <div class="col d-flex justify-content-end p-0 gap-3">
                 {% if user.is_manager %}
-                    <a class="btn site-btn-red" href="#">
+                    <a class="btn site-btn-red" href="{% url 'dashboard:home' %}">
                         <i class="fa-solid fa-chess-king"></i>
                     </a>
                 {% endif %}
