dashboard, templates, token_list: added mb

--- a/django-app/dashboard/templates/dashboard/token_list.html
+++ b/django-app/dashboard/templates/dashboard/token_list.html
@@ -13,7 +13,7 @@
 
 {% block main_content %}
     <div class="row">
-        <div class="col d-flex justify-content-end">
+        <div class="col d-flex justify-content-end mb-4">
             <a href="{% url 'dashboard:generate-token' %}" class="btn site-btn">Generate new token</a>
         </div>
     </div>
