--- a/django-app/templates/base_box.html
+++ b/django-app/templates/base_box.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center p-4">
         <div class="site-box p-4 bg-white {% block box_col_size %}col-12 col-lg-7{% endblock %} shadow">
             <div class="row mb-3">
-                <div class="col">
+                <div class="col d-flex justify-content-between">
                     {% block back_url %}{% endblock %}
                 </div>
             </div>
