dashboard, templates, token_list: added home button

--- a/django-app/dashboard/templates/dashboard/token_list.html
+++ b/django-app/dashboard/templates/dashboard/token_list.html
@@ -6,6 +6,9 @@
     <a href="{% url 'dashboard:home' %}" class="font-6 path-link no-decoration">
         <i class="fas fa-chevron-left mr-2"></i> Back
     </a>
+    <a href="{% url 'transcribe:transcription-list' %}" class="path-link">
+        <i class="fa-solid fa-house"></i>
+    </a>
 {% endblock %}
 
 {% block box_title %}Tokens{% endblock %}
