static, css, media-queries: added rules

--- a/django-app/static/css/media-queries.css
+++ b/django-app/static/css/media-queries.css
@@ -9,4 +9,10 @@
     .align-items-mobile-start {
         align-items: start !important;
     }
+    .align-items-mobile-center {
+        align-items: center !important;
+    }
+    .text-mobile-center {
+        text-align: center !important;
+    }
 }
