--- a/django-app/templates/home.html
+++ b/django-app/templates/home.html
@@ -8,6 +8,9 @@
 
 {% block extra_css %}
     <style>
+        body {
+            background-color: #ffffff;
+        }
         #site-main-page {
             margin-top: 0 !important;
             padding-right: 4rem !important;
